force-app/main/default/objects/Metric__c/Metric__c.object-meta.xml
<CustomObject>
    <description>Metric object that syncs with the metrics data from cognos via SSIS package</description>
    <label>Metric</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>