force-app/main/default/objects/Metric__c/fields/isuf_manager_id__c.field-meta.xml
<CustomField>
    <fullName>isuf_manager_id__c</fullName>
    <label>isuf manager id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>