force-app/main/default/objects/Metric__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <length>50</length>
    <type>Text</type>
</CustomField>