force-app/main/default/objects/Metric__c/fields/Metric_Goal__c.field-meta.xml
<CustomField>
    <fullName>Metric_Goal__c</fullName>
    <label>Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>