force-app/main/default/objects/Metric__c/fields/Metric_Measure__c.field-meta.xml
<CustomField>
    <fullName>Metric_Measure__c</fullName>
    <label>YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>