force-app/main/default/objects/Metric__c/fields/Percentage_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Numeric__c</fullName>
    <label>Percentage to Goal</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>