force-app/main/default/objects/Metric__c/fields/Two_Year_Term__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Term__c</fullName>
    <label>Two Year Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>