force-app/main/default/objects/Metric__c/fields/User_id__c.field-meta.xml
<CustomField>
    <fullName>User_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metrics_del</relationshipName>
    <type>Lookup</type>
</CustomField>